--- a/composer.json
+++ b/composer.json
@@ -13,7 +13,7 @@
 	],
 	"require": {
 		"php": ">=5.4",
-		"fuelphp/common": "dev-master"
+		"fuelphp/filesystem": "dev-master"
 	},
 	"require-dev": {
 		"codeception/codeception": "~2.0.0"
