--- a/composer.json
+++ b/composer.json
@@ -12,8 +12,7 @@
 		}
 	],
 	"require": {
-		"php": ">=5.4",
-		"fuelphp/filesystem": "dev-master"
+		"php": ">=5.4"
 	},
 	"require-dev": {
 		"codeception/codeception": "~2.0.0"
