Adds super basic asset tag generation for css

--- a/composer.json
+++ b/composer.json
@@ -12,7 +12,8 @@
 		}
 	],
 	"require": {
-		"php": ">=5.4"
+		"php": ">=5.4",
+		"fuelphp/filesystem": "dev-master"
 	},
 	"require-dev": {
 		"codeception/codeception": "~2.0.0"
